--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ button {
   
   /* Todo Header */
   .todo-container {
+    width: 100%;
     max-width: 450px;
     margin: 3rem auto 0;
     background-color: #c1dce3;
