--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     background-size: cover;
     background-position-y: top ;
     background-repeat: no-repeat;
+    height: 100vh;
 }
 
 button {
